--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
-    "prettier-plugin-tailwindcss": "^0.6.4"
+    "prettier": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.2"
   }
 }
