--- a/OPENAI_API/client/package.json
+++ b/OPENAI_API/client/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.4",
     "axios": "^1.7.2",
+    "heroicons": "^2.1.4",
     "openai": "^4.0.0",
     "prettier": "^3.3.2",
     "react": "^18.2.0",
