--- a/OPENAI_API/client/package.json
+++ b/OPENAI_API/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.4",
     "axios": "^1.7.2",
+    "framer-motion": "^11.2.12",
     "heroicons": "^2.1.4",
     "openai": "^4.0.0",
     "prettier": "^3.3.2",
